# maia_cpp_draft

./: .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  README.md  TEST_TMP  TODO.txt  TODO_python.py
maia/: cpp_cgns_utils.hpp
maia/connectivity/: concepts.hpp  connectivity.hpp  connectivity_range.hpp  connectivity_ref.hpp  connectivity_view.hpp  heterogenous_connectivity_range.hpp  heterogenous_connectivity_ref.hpp  heterogenous_connectivity_view.hpp  indexed_poly_connectivity_range.hpp  interleaved_connectivity_random_access_range.hpp  interleaved_connectivity_range.hpp  interleaved_connectivity_view.hpp  poly_elt_t_kind.hpp  utility.hpp
maia/connectivity/test/: connectivity_range.test.cpp  connectivity_ref.test.cpp  connectivity_view.test.cpp  heterogenous_connectivities.test.cpp  heterogenous_connectivity_range.test.cpp  heterogenous_connectivity_ref.test.cpp  indexed_poly_connectivity_range.test.cpp  interleaved_connectivities.test.cpp  interleaved_connectivity_range.test.cpp  poly_elt_t_reference.test.cpp  test_utils.hpp  utility.test.cpp
maia/connectivity_cgns/: connectivity.hpp  connectivity_kind.hpp  poly_elt_t_reference.hpp  range.hpp
maia/connectivity_cgns/test/: poly_elt_t_reference.test.cpp  range.test.cpp
maia/generate/: from_structured_grid.hpp  nfaces_from_ngons.cpp
maia/generate/ngons/: from_homogenous_faces.hpp
maia/generate/ngons/from_cells/: append_faces_with_parent_id.hpp  cast_heterogenous_to_homogenous.hpp  create_ngon.cpp  face_with_parents.hpp  faces_heterogenous_container.hpp  generate_faces.hpp  generate_faces_from_connectivity_elts.hpp  generate_ngons_from_elts.cpp  generate_ngons_from_elts.hpp  unique_faces.hpp
maia/generate/ngons/from_cells/test/: cast_heterogenous_to_homogenous.test.cpp  generate_faces.test.cpp  generate_faces_from_connectivity_elts.test.cpp  generate_ngons_from_elts.test.cpp  unique_faces.test.cpp
maia/generate/ngons/test/: from_homogenous_faces.test.cpp
maia/generate/test/: from_structured_grid.test.cpp  structured_grid_utils.test.cpp
maia/interop/: maia.cpython.cpp  maia.py  py_maia.cpp
maia/log/: default_log.cpp  log.cpp  test_log.test.cpp
maia/parallel/: all_to_all_zones.hpp  label_proc_registry.hpp  neighbor_graph.cpp  neighbor_graph.hpp
maia/parallel/test/: all_to_all_zones.test.cpp  neighbor_graph.test.cpp
maia/sids_example/: distributed_base.cpp  distributed_base.hpp  unstructured_base.cpp  unstructured_base.hpp
maia/sids_example/test/: unstructured_base.test.cpp
maia/transform/: base_renumbering.cpp  base_renumbering.hpp  convert_to_simple_connectivities.cpp  convert_to_simple_connectivities.hpp  remove_ghost_info.cpp  remove_ghost_info.hpp  renumber_point_lists.cpp  renumber_point_lists.hpp
maia/transform/partition_with_boundary_first/: boundary_ngons_at_beginning.hpp  boundary_vertices.cpp  boundary_vertices_at_beginning.cpp  partition_with_boundary_first.cpp  partition_with_boundary_first.hpp
maia/transform/partition_with_boundary_first/test/: boundary_ngons_at_beginning.test.cpp  boundary_vertices.test.cpp  boundary_vertices_at_beginning.test.cpp  partition_with_boundary_first.test.cpp
maia_par/interop/: maia.cpython.cpp
maia_par/parallel/: neighbor_graph.hpp
maia_par/transform/: base_renumbering.cpp  base_renumbering.hpp  donated_point_lists.hpp  remove_ghost_info.hpp  renumber_point_lists.hpp
maia_par/transform/partition_with_boundary_first/: boundary_vertices.cpp  partition_with_boundary_first.cpp
maia_par/transform/partition_with_boundary_first/test/: boundary_vertices.test.cpp
maia_par/transform/test/: base_renumbering.test.cpp
scripts/: install.sh
